==> sjt13/car_stm32/Hardware_program/y_motor.c <==
#include "y_motor.h"

/**
 * @简  述  电机PID控制函数
 * @参  数  spd_target:编码器速度目标值 ,范围（±250）
 *          spd_current: 编码器速度当前值
 * @返回值  电机PWM速度
 */
int16_t SPEED_PidCtlA(float spd_target, float spd_current)
{
	static int16_t motor_pwm_out;
	static float bias, bias_last;

	// 获得偏差值
	bias = spd_target - spd_current;

	// PID计算电机输出PWM值
	motor_pwm_out += motor_kp * bias + motor_kd * (bias - bias_last);

	// 记录上次偏差
	bias_last = bias;

	// 限制最大输出
	if (motor_pwm_out > 4200)
		motor_pwm_out = 4200;
	if (motor_pwm_out < -4200)
		motor_pwm_out = -4200;

	// 返回PWM控制值
	return motor_pwm_out;
}

/**
 * @简  述  电机PID控制函数
 * @参  数  spd_target:编码器速度目标值
 *          spd_target: 编码器速度当前值
 * @返回值  电机PWM速度
 */
int16_t SPEED_PidCtlB(float spd_target, float spd_current)
{
	static int16_t motor_pwm_out;
	static float bias, bias_last;

	// 获得偏差值
	bias = spd_target - spd_current;

	// PID计算电机输出PWM值
	motor_pwm_out += motor_kp * bias + motor_kd * (bias - bias_last);

	// 记录上次偏差
	bias_last = bias;

	// 限制最大输出
	if (motor_pwm_out > 4200)
		motor_pwm_out = 4200;
	if (motor_pwm_out < -4200)
		motor_pwm_out = -4200;
	
	//printf("@%d  ",motor_pwm_out);

	// 返回PWM控制值
	return motor_pwm_out;
}

/**
 * @简  述  电机PID控制函数
 * @参  数  spd_target:编码器速度目标值
 *          spd_target: 编码器速度当前值
 * @返回值  电机PWM速度
 */
int16_t SPEED_PidCtlC(float spd_target, float spd_current)
{
	static int16_t motor_pwm_out;
	static float bias, bias_last;

	// 获得偏差值
	bias = spd_target - spd_current;

	// PID计算电机输出PWM值
	motor_pwm_out += motor_kp * bias + motor_kd * (bias - bias_last);

	// 记录上次偏差
	bias_last = bias;

	// 限制最大输出
	if (motor_pwm_out > 4200)
		motor_pwm_out = 4200;
	if (motor_pwm_out < -4200)
		motor_pwm_out = -4200;

	// 返回PWM控制值
	return motor_pwm_out;
}

/**
 * @简  述  电机PID控制函数
 * @参  数  spd_target:编码器速度目标值
 *          spd_target: 编码器速度当前值
 * @返回值  电机PWM速度
 */
int16_t SPEED_PidCtlD(float spd_target, float spd_current)
{
	static int16_t motor_pwm_out;
	static float bias, bias_last;

	// 获得偏差值
	bias = spd_target - spd_current;

	// PID计算电机输出PWM值
	motor_pwm_out += motor_kp * bias + motor_kd * (bias - bias_last);

	// 记录上次偏差
	bias_last = bias;

	// 限制最大输出
	if (motor_pwm_out > 4200)
		motor_pwm_out = 4200;
	if (motor_pwm_out < -4200)
		motor_pwm_out = -4200;

	// 返回PWM控制值
	return motor_pwm_out;
}

/**
 * @简  述 电机PWM速度控制
 * @参  数 speed 电机转速数值，范围-4200~4200
 * @返回值 无
 */
void MOTOR_A_SetSpeed(int16_t speed)
{
	int16_t temp;

	temp = speed;

	if (temp > 4200)
		temp = 4200;
	if (temp < -4200)
		temp = -4200;

	if (temp > 0)
	{
		TIM_SetCompare1(TIM1, 4200);
		TIM_SetCompare2(TIM1, (4200 - temp));
	}
	else
	{
		TIM_SetCompare2(TIM1, 4200);
		TIM_SetCompare1(TIM1, (4200 + temp));
	}
}

/**
 * @简  述 电机PWM速度控制
 * @参  数 speed 电机转速数值，范围-4200~4200
 * @返回值 无
 */
void MOTOR_B_SetSpeed(int16_t speed)
{
	int16_t temp;

	temp = speed;

	if (temp > 4200)
		temp = 4200;
	if (temp < -4200)
		temp = -4200;

	if (temp > 0)
	{
		TIM_SetCompare3(TIM1, 4200);
		TIM_SetCompare4(TIM1, (4200 - temp));
	}
	else
	{
		TIM_SetCompare4(TIM1, 4200);
		TIM_SetCompare3(TIM1, (4200 + temp));
	}
}

/**
 * @简  述 电机PWM速度控制
 * @参  数 speed 电机转速数值，范围-4200~4200
 * @返回值 无
 */
void MOTOR_D_SetSpeed(int16_t speed)
{
	int16_t temp;

	temp = speed;

	if (temp > 4200)
		temp = 4200;
	if (temp < -4200)
		temp = -4200;

	if (temp > 0)
	{
		TIM_SetCompare1(TIM9, 4200);
		TIM_SetCompare2(TIM9, (4200 - temp));
	}
	else
	{
		TIM_SetCompare2(TIM9, 4200);
		TIM_SetCompare1(TIM9, (4200 + temp));
	}
}

/**
 * @简  述 电机PWM速度控制
 * @参  数 speed 电机转速数值，范围-4200~4200
 * @返回值 无
 */
void MOTOR_C_SetSpeed(int16_t speed)
{
	int16_t temp;

	temp = speed;

	if (temp > 4200)
		temp = 4200;
	if (temp < -4200)
		temp = -4200;

	if (temp > 0)
	{
		TIM_SetCompare1(TIM12, 4200);
		TIM_SetCompare2(TIM12, (4200 - temp));
	}
	else
	{
		TIM_SetCompare2(TIM12, 4200);
		TIM_SetCompare1(TIM12, (4200 + temp));
	}
}
